--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="hero-content">
             <div class="hero-badge">👋 Available for Internship</div>
             <h1 class="hero-title">
-                Hi, I'm <span class="gradient-text">Thành Lê</span>
+                Hi, I'm <span class="gradient-text">Lê Thánh</span>
             </h1>
             <p class="hero-subtitle">Frontend Developer & Web Enthusiast</p>
             <p class="hero-description">
@@ -430,7 +430,7 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <div class="footer-logo">TL</div>
-                    <p>© 2025 Thành Lê. Building the web, one project at a time.</p>
+                    <p>© 2025 Lê Thánh. Building the web, one project at a time.</p>
                 </div>
                 <div class="footer-right">
                     <div class="footer-links">
@@ -447,4 +447,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
