--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;800&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.1.0/css/all.min.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="nav">
         <div class="nav-content">
-            <div class="nav-logo">TL</div>
+            <div class="nav-logo">LeThanh</div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -89,19 +88,19 @@
 
             <div class="about-grid">
                 <div class="about-card">
-                    <div class="card-icon"><i class="fa-solid fa-suitcase"></i></div>
+                    <div class="card-icon">💼</div>
                     <h3>Professional Focus</h3>
                     <p>Passionate about creating seamless user experiences through clean, efficient code. I believe great design and functionality go hand-in-hand.</p>
                 </div>
 
                 <div class="about-card">
-                    <div class="card-icon"><i class="fa-solid fa-bullseye"></i></div>
+                    <div class="card-icon">🎯</div>
                     <h3>Current Goal</h3>
                     <p>Seeking a frontend developer internship where I can contribute to real-world projects while learning from experienced developers.</p>
                 </div>
 
                 <div class="about-card">
-                    <div class="card-icon"><i class="fa-solid fa-rocket"></i></div>
+                    <div class="card-icon">🚀</div>
                     <h3>What I Bring</h3>
                     <p>Strong foundation in modern web technologies, cloud deployment experience, and a hunger to learn and adapt to new challenges.</p>
                 </div>
@@ -109,21 +108,21 @@
 
             <div class="contact-bar">
                 <div class="contact-item">
-                    <span class="contact-icon"><i class="fa-solid fa-phone"></i></span>
+                    <span class="contact-icon">📱</span>
                     <div>
                         <div class="contact-label">Phone</div>
                         <div class="contact-value">0794911532</div>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <span class="contact-icon"><i class="fa-solid fa-envelope"></i></span>
+                    <span class="contact-icon">✉️</span>
                     <div>
                         <div class="contact-label">Email</div>
                         <div class="contact-value">thanhhihi765@gmail.com</div>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <span class="contact-icon"><i class="fa-solid fa-location-dot"></i></span>
+                    <span class="contact-icon">📍</span>
                     <div>
                         <div class="contact-label">Location</div>
                         <div class="contact-value">119/7 Nguyễn Thị Thập, HCMC</div>
@@ -185,7 +184,7 @@
                         </div>
 
                         <div class="project-result">
-                            <strong><i class="fa-solid fa-bullseye"></i> Result:</strong> Achieved 98% uptime with seamless user experience and positive feedback from test users
+                            <strong>🎯 Result:</strong> Achieved 98% uptime with seamless user experience and positive feedback from test users
                         </div>
                     </div>
                 </article>
@@ -203,7 +202,7 @@
                                         <stop offset="100%" style="stop-color:#2563EB;stop-opacity:1" />
                                     </linearGradient>
                                 </defs>
-                                <text x="50%" y="50%" text-anchor="middle" dy=".3em" fill="white" font-size="60" font-weight="bold"><i class="fa-solid fa-cloud"></i></text>
+                                <text x="50%" y="50%" text-anchor="middle" dy=".3em" fill="white" font-size="60" font-weight="bold">☁️</text>
                             </svg>
                         </div>
                     </div>
@@ -233,7 +232,7 @@
                         </div>
 
                         <div class="project-result">
-                            <strong><i class="fa-solid fa-bullseye"></i> Result:</strong> Deployed production environment with 99% uptime, globally accessible via AWS infrastructure
+                            <strong>🎯 Result:</strong> Deployed production environment with 99% uptime, globally accessible via AWS infrastructure
                         </div>
                     </div>
                 </article>
@@ -252,7 +251,7 @@
             <div class="skills-grid">
                 <div class="skill-category">
                     <div class="category-header">
-                        <div class="category-icon"><i class="fa-solid fa-laptop-code"></i></div>
+                        <div class="category-icon">💻</div>
                         <h3>Frontend Development</h3>
                     </div>
                     <div class="skill-items">
@@ -277,7 +276,7 @@
 
                 <div class="skill-category">
                     <div class="category-header">
-                        <div class="category-icon"><i class="fa-solid fa-gear"></i></div>
+                        <div class="category-icon">⚙️</div>
                         <h3>Backend Development</h3>
                     </div>
                     <div class="skill-items">
@@ -302,7 +301,7 @@
 
                 <div class="skill-category">
                     <div class="category-header">
-                        <div class="category-icon"><i class="fa-solid fa-database"></i></div>
+                        <div class="category-icon">🗄️</div>
                         <h3>Database & DevOps</h3>
                     </div>
                     <div class="skill-items">
@@ -327,7 +326,7 @@
 
                 <div class="skill-category">
                     <div class="category-header">
-                        <div class="category-icon"><i class="fa-solid fa-screwdriver-wrench"></i></div>
+                        <div class="category-icon">🛠️</div>
                         <h3>Tools & Others</h3>
                     </div>
                     <div class="tools-grid">
@@ -353,17 +352,17 @@
 
             <div class="interests-grid">
                 <div class="interest-card">
-                    <div class="interest-icon"><i class="fa-solid fa-chess"></i></div>
+                    <div class="interest-icon">♟️</div>
                     <h3>Chess</h3>
                     <p>Strategic thinking and problem-solving through classical chess</p>
                 </div>
                 <div class="interest-card">
-                    <div class="interest-icon"><i class="fa-solid fa-chess-board"></i></div>
+                    <div class="interest-icon">🎯</div>
                     <h3>Chinese Chess</h3>
                     <p>Exploring traditional strategy games and tactical planning</p>
                 </div>
                 <div class="interest-card">
-                    <div class="interest-icon"><i class="fa-solid fa-person-running"></i></div>
+                    <div class="interest-icon">🏃</div>
                     <h3>Jogging</h3>
                     <p>Staying active and maintaining a healthy work-life balance</p>
                 </div>
@@ -386,14 +385,14 @@
                     
                     <div class="contact-methods">
                         <a href="mailto:thanhhihi765@gmail.com" class="contact-method">
-                            <span class="method-icon"><i class="fa-solid fa-envelope"></i></span>
+                            <span class="method-icon">✉️</span>
                             <div>
                                 <div class="method-label">Email me at</div>
                                 <div class="method-value">thanhhihi765@gmail.com</div>
                             </div>
                         </a>
                         <a href="tel:0794911532" class="contact-method">
-                            <span class="method-icon"><i class="fa-solid fa-phone"></i></span>
+                            <span class="method-icon">📱</span>
                             <div>
                                 <div class="method-label">Call me at</div>
                                 <div class="method-value">0794911532</div>
@@ -431,7 +430,7 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <div class="footer-logo">LeThanh</div>
-                    <p>© 2025 Lê Thánh. Building the web, one project at a time.</p>
+                    <p>© 2025 Thành Lê. Building the web, one project at a time.</p>
                 </div>
                 <div class="footer-right">
                     <div class="footer-links">
@@ -448,4 +447,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
